Change link theme unity

--- a/addons/shared_addons/themes/unity/views/layouts/default.html
+++ b/addons/shared_addons/themes/unity/views/layouts/default.html
@@ -66,7 +66,7 @@
         });
     </script>
     <!--[if lt IE 9]>
-    <script src="{{ theme:path }}/js/respond.js"></script>
+    <script src="<?php echo base_url();?>{{ theme:path }}/js/respond.js"></script>
     <![endif]-->
 
 </body>
