--- a/addons/shared_addons/themes/unity/views/partials/metadata.html
+++ b/addons/shared_addons/themes/unity/views/partials/metadata.html
@@ -12,20 +12,20 @@
 {{ theme:favicon }}
 
 <!-- CSS Global Compulsory-->
-<link rel="stylesheet" href="{{ theme:path }}/plugins/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="{{ theme:path }}/css/style.css">
-<link rel="stylesheet" href="{{ theme:path }}/css/headers/header1.css">
-<link rel="stylesheet" href="{{ theme:path }}/plugins/bootstrap/css/bootstrap-responsive.min.css">
-<link rel="stylesheet" href="{{ theme:path }}/css/style_responsive.css">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/plugins/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/css/style.css">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/css/headers/header1.css">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/plugins/bootstrap/css/bootstrap-responsive.min.css">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/css/style_responsive.css">
 
 <!-- CSS Implementing Plugins -->
-<link rel="stylesheet" href="{{ theme:path }}/plugins/font-awesome/css/font-awesome.css">
-<link rel="stylesheet" href="{{ theme:path }}/plugins/flexslider/flexslider.css" type="text/css" media="screen">
-<link rel="stylesheet" href="{{ theme:path }}/plugins/parallax-slider/css/parallax-slider.css" type="text/css">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/plugins/font-awesome/css/font-awesome.css">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/plugins/flexslider/flexslider.css" type="text/css" media="screen">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/plugins/parallax-slider/css/parallax-slider.css" type="text/css">
 
 <!-- CSS Theme -->
-<link rel="stylesheet" href="{{ theme:path }}/css/themes/default.css" id="style_color">
-<link rel="stylesheet" href="{{ theme:path }}/css/themes/headers/default.css" id="style_color-header-1">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/css/themes/default.css" id="style_color">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/css/themes/headers/default.css" id="style_color-header-1">
 
 <!-- JS Global Var -->
 <script type="text/javascript" language="JavaScript">
@@ -33,14 +33,14 @@
 </script>
 
 <!-- JS Global Compulsory -->
-<script type="text/javascript" src="{{ theme:path }}/js/jquery-1.8.2.min.js"></script>
-<script type="text/javascript" src="{{ theme:path }}/js/modernizr.custom.js"></script>
-<script type="text/javascript" src="{{ theme:path }}/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/js/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/js/modernizr.custom.js"></script>
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/plugins/bootstrap/js/bootstrap.min.js"></script>
 <!-- JS Implementing Plugins -->
-<script type="text/javascript" src="{{ theme:path }}/plugins/flexslider/jquery.flexslider-min.js"></script>
-<script type="text/javascript" src="{{ theme:path }}/plugins/parallax-slider/js/modernizr.js"></script>
-<script type="text/javascript" src="{{ theme:path }}/plugins/parallax-slider/js/jquery.cslider.js"></script>
-<script type="text/javascript" src="{{ theme:path }}/plugins/back-to-top.js"></script>
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/plugins/flexslider/jquery.flexslider-min.js"></script>
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/plugins/parallax-slider/js/modernizr.js"></script>
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/plugins/parallax-slider/js/jquery.cslider.js"></script>
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/plugins/back-to-top.js"></script>
 <!-- JS Page Level -->
-<script type="text/javascript" src="{{ theme:path }}/js/app.js"></script>
-<script type="text/javascript" src="{{ theme:path }}/js/pages/index.js"></script>
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/js/app.js"></script>
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/js/pages/index.js"></script>
