--- a/addons/shared_addons/themes/unity/views/layouts/default.html
+++ b/addons/shared_addons/themes/unity/views/layouts/default.html
@@ -40,13 +40,26 @@
         {{ theme:partial name="home_content" }}
         <!--=== End Home Content Part ===-->
     {{ else }}
+
         <!--=== Breadcrumbs ===-->
         {{ theme:partial name="breadcrumbs" }}
         <!--=== End Breadcrumbs ===-->
 
         <!--=== Content Part ===-->
-        {{ template:body }}
+        <div class="container">
+            <div class="row-fluid blog-page">
+                <!-- Right Sidebar -->
+                {{ template:body }}
+                <!-- Right Sidebar -->
+
+                <!-- Left Sidebar -->
+                {{ theme:partial name="left_sidebar" }}
+                <!-- /Left Sidebar -->
+
+            </div><!--/row-fluid-->
+        </div><!--/container-->
         <!--=== End Content Part ===-->
+
     {{ endif }}
 
     <!--=== Footer ===-->
