feedback manager module

--- a/addons/shared_addons/themes/unity/views/layouts/default.html
+++ b/addons/shared_addons/themes/unity/views/layouts/default.html
@@ -53,7 +53,7 @@
                 <!-- Right Sidebar -->
 
                 <!-- Left Sidebar -->
-                {{ theme:partial name="left_sidebar" }}
+                <!--{{ theme:partial name="left_sidebar" }}-->
                 <!-- /Left Sidebar -->
 
             </div><!--/row-fluid-->
