Filter Form Demo

--- a/addons/shared_addons/themes/unity/views/partials/metadata.html
+++ b/addons/shared_addons/themes/unity/views/partials/metadata.html
@@ -44,3 +44,5 @@
 <!-- JS Page Level -->
 <script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/js/app.js"></script>
 <script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/js/pages/index.js"></script>
+<!-- JS Ajax Form -->
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/js/jquery.form.js"></script>
