--- a/addons/shared_addons/themes/unity/css/style.css
+++ b/addons/shared_addons/themes/unity/css/style.css
@@ -71,6 +71,10 @@ h1 i, h2 i, h3 i, h4 i, h5 i {
 	border-bottom:2px solid #72c02c;
 }
 
+.clear{
+    clear: both;
+}
+
 /*Purchase*/
 .purchase {
 	padding:30px 0 20px;
@@ -1865,4 +1869,27 @@ i.style-switcher-btn-option:hover {
     height: 80px;
     position: relative;
     margin-top: -31px !important;
+}
+
+.filter_form {
+    margin-bottom: 5px;
+}
+
+.filter_wrapper {
+    width: 100%;
+}
+
+.filter_wrapper form {
+    float: right;
+    width: 100%;
+}
+
+.filter_wrapper .btn_add_filter {
+    margin-right: 25px;
+    float: left;
+}
+
+.filter_wrapper form button,
+.filter_wrapper form input{
+    float: right !important;
 }
