CRUD by AJax for Team Module

--- a/addons/shared_addons/themes/unity/views/layouts/default.html
+++ b/addons/shared_addons/themes/unity/views/layouts/default.html
@@ -47,6 +47,9 @@
 
         <!--=== Content Part ===-->
         <div class="container">
+            <!-- Message Bar -->
+            {{ theme:partial name="message_bar" }}
+            <!-- /Message Bar -->
             <div class="row-fluid blog-page">
                 <!-- Left Sidebar -->
                 {{ theme:partial name="left_sidebar" }}
