--- a/addons/shared_addons/themes/unity/css/style.css
+++ b/addons/shared_addons/themes/unity/css/style.css
@@ -1897,3 +1897,20 @@ i.style-switcher-btn-option:hover {
 .tab-content {
     padding: 20px 0px 10px;
 }
+
+.form_field{
+    width: 60%;
+    float: left;
+}
+
+.hidden{
+    display: none;
+}
+
+#message_block h4{
+    display: none;
+}
+
+label span.require{
+    color: #ff0a27;
+}
