Fix error image path

--- a/addons/shared_addons/themes/unity/views/partials/metadata.html
+++ b/addons/shared_addons/themes/unity/views/partials/metadata.html
@@ -29,7 +29,7 @@
 
 <!-- JS Global Var -->
 <script type="text/javascript" language="JavaScript">
-    var theme_path = '{{ theme:path }}' + '/';
+    var theme_path = BASE_URL + '{{ theme:path }}' + '/';
 </script>
 
 <!-- JS Global Compulsory -->
