--- a/addons/shared_addons/themes/unity/views/partials/slider.html
+++ b/addons/shared_addons/themes/unity/views/partials/slider.html
@@ -5,7 +5,7 @@
         <div class="da-slide">
             <h2><i>CLEAN &amp; FRESH</i> <br /> <i>FULLY RESPONSIVE</i> <br /> <i>DESIGN</i></h2>
             <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i> <br /> <i>veniam omnis </i></p>
-            <div class="da-img"><img src="{{ theme:path }}/plugins/parallax-slider/img/1.png" alt="" /></div>
+            <div class="da-img"><img src="{{ url:site }}files/large/slider_1.png" alt="" /></div>
         </div>
         <div class="da-slide">
             <h2><i>RESPONSIVE VIDEO</i> <br /> <i>SUPPORT AND</i> <br /> <i>MANY MORE</i></h2>
@@ -19,7 +19,7 @@
         <div class="da-slide">
             <h2><i>USING BEST WEB</i> <br /> <i>SOLUTIONS WITH</i> <br /> <i>HTML5/CSS3</i></h2>
             <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i> <br /> <i>veniam omnis </i></p>
-            <div class="da-img"><img src="{{ theme:path }}/plugins/parallax-slider/img/html5andcss3.png" alt="image01" /></div>
+            <div class="da-img"><img src="{{ url:site }}files/large/slider_html5andcss3.png" alt="image01" /></div>
         </div>
         <nav class="da-arrows">
             <span class="da-arrows-prev"></span>
