--- a/addons/shared_addons/themes/unity/views/partials/footer.html
+++ b/addons/shared_addons/themes/unity/views/partials/footer.html
@@ -22,19 +22,19 @@
                 <div class="posts">
                     <div class="headline"><h3>Recent Blog Entries</h3></div>
                     <dl class="dl-horizontal">
-                        <dt><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/6.jpg" alt="" /></a></dt>
+                        <dt><a href="#"><img src="{{ url:site }}files/large/6.jpg" alt="" /></a></dt>
                         <dd>
                             <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p>
                         </dd>
                     </dl>
                     <dl class="dl-horizontal">
-                        <dt><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/10.jpg" alt="" /></a></dt>
+                        <dt><a href="#"><img src="{{ url:site }}files/large/10.jpg" alt="" /></a></dt>
                         <dd>
                             <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p>
                         </dd>
                     </dl>
                     <dl class="dl-horizontal">
-                        <dt><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/11.jpg" alt="" /></a></dt>
+                        <dt><a href="#"><img src="{{ url:site }}files/large/11.jpg" alt="" /></a></dt>
                         <dd>
                             <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p>
                         </dd>
