--- a/addons/shared_addons/themes/unity/views/partials/left_sidebar.html
+++ b/addons/shared_addons/themes/unity/views/partials/left_sidebar.html
@@ -3,19 +3,19 @@
     <div class="posts margin-bottom-20">
         <div class="headline"><h3>Recent Blog Entries</h3></div>
         <dl class="dl-horizontal">
-            <dt><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/6.jpg" alt="" /></a></dt>
+            <dt><a href="#"><img src="{{ url:site }}files/large/6.jpg" alt="" /></a></dt>
             <dd>
                 <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p>
             </dd>
         </dl>
         <dl class="dl-horizontal">
-            <dt><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/10.jpg" alt="" /></a></dt>
+            <dt><a href="#"><img src="{{ url:site }}files/large/10.jpg" alt="" /></a></dt>
             <dd>
                 <p><a href="#">Lorem sequat ipsum dolor lorem sunt aliqua put a bird sit amet consectetur.</a></p>
             </dd>
         </dl>
         <dl class="dl-horizontal">
-            <dt><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/11.jpg" alt="" /></a></dt>
+            <dt><a href="#"><img src="{{ url:site }}files/large/11.jpg" alt="" /></a></dt>
             <dd>
                 <p><a href="#">It works on all major web browsers, tablets and aliqua lorem sequat ipsum.</a></p>
             </dd>
@@ -41,14 +41,14 @@
     <!-- Photo Stream -->
     <div class="headline"><h3>Photo Stream</h3></div>
     <ul class="unstyled blog-ads">
-        <li><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/5.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/6.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/8.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/10.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/11.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/1.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/2.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="{{ theme:path }}/img/sliders/elastislide/7.jpg" alt="" class="hover-effect" /></a></li>
+        <li><a href="#"><img src="{{ url:site }}files/large/5.jpg" alt="" class="hover-effect" /></a></li>
+        <li><a href="#"><img src="{{ url:site }}files/large/6.jpg" alt="" class="hover-effect" /></a></li>
+        <li><a href="#"><img src="{{ url:site }}files/large/8.jpg" alt="" class="hover-effect" /></a></li>
+        <li><a href="#"><img src="{{ url:site }}files/large/10.jpg" alt="" class="hover-effect" /></a></li>
+        <li><a href="#"><img src="{{ url:site }}files/large/11.jpg" alt="" class="hover-effect" /></a></li>
+        <li><a href="#"><img src="{{ url:site }}files/large/1.jpg" alt="" class="hover-effect" /></a></li>
+        <li><a href="#"><img src="{{ url:site }}files/large/2.jpg" alt="" class="hover-effect" /></a></li>
+        <li><a href="#"><img src="{{ url:site }}files/large/7.jpg" alt="" class="hover-effect" /></a></li>
     </ul>
 
     <!-- Blog Tags -->
