--- a/addons/shared_addons/themes/unity/views/partials/left_sidebar.html
+++ b/addons/shared_addons/themes/unity/views/partials/left_sidebar.html
@@ -1,4 +1,12 @@
 <div class="span3">
+    <div class="posts margin-bottom-20">
+        <div class="headline"><h3>{{ helper:lang line="navigation_headline" }}</h3></div>
+        <div class="nav_sidebar">
+            <ul>
+                {{ navigation:links group="sidebar" }}
+            </ul>
+        </div>
+    </div>
     <!-- Posts -->
     <div class="posts margin-bottom-20">
         <div class="headline"><h3>Recent Blog Entries</h3></div>
