--- a/addons/shared_addons/themes/unity/css/themes/red.css
+++ b/addons/shared_addons/themes/unity/css/themes/red.css
@@ -22,6 +22,21 @@ a.read-more:hover {
 	background:url(../../plugins/parallax-slider/img/bg-heading-red.png) repeat;
 }
 
+.nav_sidebar ul li{
+    background: #e74c3c url("../../img/item.png") no-repeat !important;
+    background-size: 35px 35px;
+    color: #FFF;
+    padding: 0 0 0 40px !important;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.nav_sidebar ul li ul li {
+    background: url("../../img/plus.png") no-repeat scroll 5px 8px / 20px 20px #e74c3c !important;
+    height: 35px;
+    padding-left: 30px !important;
+    padding-top: 5px;
+}
 /*Purchase
 ------------------------------------*/
 .purchase a.btn-buy {
