Update Design right sidebar 2

--- a/addons/shared_addons/themes/unity/css/style.css
+++ b/addons/shared_addons/themes/unity/css/style.css
@@ -1957,8 +1957,8 @@ button[disabled="disabled"]{
     font-weight: 500;
 }
 .nav_sidebar ul li:hover {
-    background-color:#687074;
-    position:relative;
+    background-color:#687074 !important;
+    position:relative !important;
 }
 .nav_sidebar ul ul {
     display:none;
