Update News Module V1.0.5

--- a/addons/shared_addons/themes/unity/views/layouts/default.html
+++ b/addons/shared_addons/themes/unity/views/layouts/default.html
@@ -46,7 +46,9 @@
         <!--=== End Breadcrumbs ===-->
 
         <!--=== Content Part ===-->
-        {{ template:body }}
+        <div class="container">
+            {{ template:body }}
+        </div>
         <!--=== End Content Part ===-->
 
     {{ endif }}
