Update Breadcrumb Module V1.0.3

--- a/addons/shared_addons/themes/unity/views/partials/right_sidebar.html
+++ b/addons/shared_addons/themes/unity/views/partials/right_sidebar.html
@@ -2,7 +2,7 @@
     <!-- Search Bar -->
     <div class="headline"><h3>Search Bar</h3></div>
     <div class="input-append  margin-bottom-20">
-        <input type="text" class="span9">
+        <input type="text" class="span10">
         <button type="button" class="btn-u">Search</button>
     </div>
 
@@ -10,7 +10,7 @@
         <div class="headline"><h3>{{ helper:lang line="navigation_headline" }}</h3></div>
         <div class="nav_sidebar">
             <ul>
-                {{ navigation:links group="sidebar" }}
+                {{ navigation:links group="news-category" }}
             </ul>
         </div>
     </div>
