--- a/addons/shared_addons/themes/unity/views/partials/breadcrumbs.html
+++ b/addons/shared_addons/themes/unity/views/partials/breadcrumbs.html
@@ -9,6 +9,7 @@
                     {{ endif }}
                 </h1>
                 <ul class="pull-right breadcrumb">
+                    <li><a href="<?php echo base_url(); ?>">Home</a> <span class="divider">/</span></li>
                     {{ template:breadcrumbs }}
                         {{ if uri }}
                             <li>{{ url:anchor segments=uri title=name }} <span class="divider">/</span></li>
