Update style.css v1.0.2 liemtd

--- a/addons/shared_addons/themes/unity/css/style.css
+++ b/addons/shared_addons/themes/unity/css/style.css
@@ -1955,6 +1955,7 @@ button[disabled="disabled"]{
     text-transform:uppercase;
     line-height: 35px;
     font-weight: 500;
+    display: block;
 }
 .nav_sidebar ul li:hover {
     background-color:#687074 !important;
