--- a/addons/shared_addons/themes/unity/views/partials/footer.html
+++ b/addons/shared_addons/themes/unity/views/partials/footer.html
@@ -21,24 +21,14 @@
             <div class="span4">
                 <div class="posts">
                     <div class="headline"><h3>Recent Blog Entries</h3></div>
+                    {{ news:posts limit="3" order-dir="desc" }}
                     <dl class="dl-horizontal">
-                        <dt><a href="#"><img src="{{ url:site }}files/large/6.jpg" alt="" /></a></dt>
+                        <dt><a href="{{ url }}"><img src="{{ url:site }}files/large/{{ thumbnail }}" alt="{{ title }}" /></a></dt>
                         <dd>
-                            <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p>
+                            <p><a href="{{ url }}">{{ title }}</a></p>
                         </dd>
                     </dl>
-                    <dl class="dl-horizontal">
-                        <dt><a href="#"><img src="{{ url:site }}files/large/10.jpg" alt="" /></a></dt>
-                        <dd>
-                            <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p>
-                        </dd>
-                    </dl>
-                    <dl class="dl-horizontal">
-                        <dt><a href="#"><img src="{{ url:site }}files/large/11.jpg" alt="" /></a></dt>
-                        <dd>
-                            <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p>
-                        </dd>
-                    </dl>
+                    {{ /news:posts }}
                 </div>
             </div><!--/span4-->
 
