Add Galleryr module v1.0.2 - 8/1/2013 - liemtd

--- a/addons/shared_addons/themes/unity/views/partials/metadata.html
+++ b/addons/shared_addons/themes/unity/views/partials/metadata.html
@@ -20,8 +20,10 @@
 
 <!-- CSS Implementing Plugins -->
 <link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/plugins/font-awesome/css/font-awesome.css">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/plugins/fancybox/source/jquery.fancybox.css">
 <link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/plugins/flexslider/flexslider.css" type="text/css" media="screen">
 <link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/plugins/parallax-slider/css/parallax-slider.css" type="text/css">
+<link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/css/effects.css">
 
 <!-- CSS Theme -->
 <link rel="stylesheet" href="<?php echo base_url();?>{{ theme:path }}/css/themes/default.css" id="style_color">
@@ -41,6 +43,7 @@
 <script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/plugins/parallax-slider/js/modernizr.js"></script>
 <script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/plugins/parallax-slider/js/jquery.cslider.js"></script>
 <script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/plugins/back-to-top.js"></script>
+<script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/plugins/fancybox/source/jquery.fancybox.pack.js"></script>
 <!-- JS Page Level -->
 <script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/js/app.js"></script>
 <script type="text/javascript" src="<?php echo base_url();?>{{ theme:path }}/js/pages/index.js"></script>
