--- a/addons/shared_addons/themes/unity/views/layouts/default.html
+++ b/addons/shared_addons/themes/unity/views/layouts/default.html
@@ -66,6 +66,7 @@
         jQuery(document).ready(function() {
             App.init();
             App.initSliders();
+            App.initFancybox();
             Index.initParallaxSlider();
         });
     </script>
