--- a/addons/shared_addons/themes/unity/views/partials/home_content.html
+++ b/addons/shared_addons/themes/unity/views/partials/home_content.html
@@ -102,24 +102,23 @@
         <div class="headline"><h3>Latest Shots</h3></div>
         <div id="myCarousel" class="carousel slide">
             <div class="carousel-inner">
-                <div class="item active">
-                    <img src="{{ theme:path }}/img/carousel/5.jpg" alt="">
-                    <div class="carousel-caption">
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas.</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="{{ theme:path }}/img/carousel/4.jpg" alt="">
-                    <div class="carousel-caption">
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas.</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="{{ theme:path }}/img/carousel/3.jpg" alt="">
-                    <div class="carousel-caption">
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas.</p>
-                    </div>
-                </div>
+                {{ galleries:images slug="gallery-photos" limit="5" }}
+                    {{ if {helper:count identifier="total"} == 1 }}
+                        <div class="item active">
+                            <img src="{{ url:site }}files/large/{{ file_id }}" alt="{{ description }}">
+                            <div class="carousel-caption">
+                                <p>{{ description }}</p>
+                            </div>
+                        </div>
+                    {{ else }} 
+                        <div class="item">
+                            <img src="{{ url:site }}files/large/{{ file_id }}" alt="{{ description }}">
+                            <div class="carousel-caption">
+                                <p>{{ description }}</p>
+                            </div>
+                        </div>
+                    {{ endif }}
+                {{ /galleries:images }}
             </div>
 
             <div class="carousel-arrow">
